@@ -93,6 +93,7 @@ Engine fixes:
 * Fix incorrect HP/MP regen for high regen values and high frame limits.
 * Fix camera, parallax layer, and cutscene speeds when using alternative frame limits.
 * Fix not restoring fullscreen option when pressing Cancel or Defaults in config menu.
+* Smoother scrolling in WidgetScrollBox.
 
 Game updates:
 
